--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         <main>
             <section class="main-section">
-                <div class="div-section slider-effect">
+                <div class="div-section index">
                     <div class="slider-container">
                         <div class="background-gradient"></div>
                         <div class="img-container">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <hr />
-                <div class="div-section sections">
+                <div class="div-section index">
                     <article class="menciones">
                         <h2 class="article-title">Menciones</h2>
                         <div class="article-container">
@@ -66,12 +66,12 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <p>Historia</p>
-                                    <p>Misión</p>
+                                    <a href="#"><p>Historia</p></a>
+                                    <a href="#"><p>Misión</p></a>
                                 </div>
                                 <div>
-                                    <p>Visión</p>
-                                    <p>Valores</p>
+                                    <a href="#"><p>Visión</p></a>
+                                    <a href="#"><p>Valores</p></a>
                                 </div>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <p>Estructura Física</p>
+                                    <a href="#"><p>Estructura Física</p></a>
                                 </div>
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <p>Servicios</p>
+                                    <a href="#"><p>Servicios</p></a>
                                 </div>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <p>Galería</p>
+                                    <a href="#"><p>Galería</p></a>
                                 </div>
                             </div>
                         </div>
