--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -28,6 +28,10 @@
                 <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
             </div>
             <nav class="nav-bar">
+                <input type="checkbox" name="" id="check-menu">
+                <label for="check-menu" id="label-check">
+                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon">
+                </label>
                 <div class="menu">
                     <ul>
                         <li><a href="/index.html">Inicio</a></li>
