--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             gtag("config", "G-HMVM5Z2JYX");
         </script>
         <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Inicio - José Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,8 +24,11 @@
     <body>
         <header>
             <div class="banner-div">
-                <h1 class="banner-title">E.T.I.R.Z <br> José Laurencio Silva</h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
+                <h1 class="banner-title">
+                    E.T.I.R.Z <br />
+                    José Laurencio Silva
+                </h1>
+                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
             </div>
         </header>
         <main>
