--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -24,13 +24,16 @@
     <body>
         <header>
             <div class="banner-div">
-                <h1 class="banner-title">E.T.I.R.Z <br> José Laurencio Silva</h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
+                <h1 class="banner-title">
+                    E.T.I.R.Z <br />
+                    José Laurencio Silva
+                </h1>
+                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
             </div>
             <nav class="nav-bar">
-                <input type="checkbox" name="" id="check-menu">
+                <input type="checkbox" name="" id="check-menu" />
                 <label for="check-menu" id="label-check">
-                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon">
+                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon" />
                 </label>
                 <div class="menu">
                     <ul>
@@ -65,22 +68,31 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Administración</h1>
-                        <img src="/resources/images/menciones/administracion1.jpg" alt="" class="img-content">
+                        <img src="/resources/images/menciones/administracion1.jpg" alt="" class="img-content" />
                         <p class="text-section">El técnico en Administración esta capacitado para ejecutar y coordinar procesos administrativos, de recursos humanos y operaciones financieras de una organización, colaborando desde el análisis técnico en la toma de decisiones.</p>
-                        <br>
+                        <br />
                         <p class="text-section">Su preparación en actividades teórico-prácticas le proporcionan la experiencia requerida para ser un profesional analítico, creativo, optimista y ético en el desempeño de sus funciones. Aplica sus conocimientos y habilidades en administración para participar eficientemente en la organización un funcionamiento de las instituciones, seleccionando y controlando la administración de los diferentes recursos, diseñando estrategias que le permiten evaluar y retroalimentar el proceso administrativo a través del análisis y su criterio científico.</p>
-                        <br>
+                        <br />
                         <p class="text-section">Las materias de la mención de Administración se clasifican en:</p>
                         <ul class="list-section">
-                            <p><b>4to año: </b><!-- todo --></p>
-                            <p><b>5to año: </b><!-- todo --></p>
-                            <p><b>6to año: </b><!-- todo --></p>
+                            <p>
+                                <b>4to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>5to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>6to año: </b
+                                ><!-- todo -->
+                            </p>
                         </ul>
                     </div>
                 </div>
             </section>
             <aside class="side-bar">
-                <img src="" alt="" class="img-sidebar">
+                <img src="" alt="" class="img-sidebar" />
                 <div class="text-sidebar-container">
                     <p></p>
                 </div>
@@ -90,7 +102,10 @@
             <div class="footer-div">
                 <div class="footer-direction">
                     <h3 class="footer-title">Dirección</h3>
-                    <p>Tinaquillo, estado Cojedes. <br> Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                    <p>
+                        Tinaquillo, estado Cojedes. <br />
+                        Calle Plaza frente a la Urbanización Buenos Aires.
+                    </p>
                 </div>
                 <div class="footer-contacs">
                     <h3 class="footer-title">Contactos</h3>
