--- a/pages/menciones/informatica.html
+++ b/pages/menciones/informatica.html
@@ -24,13 +24,16 @@
     <body>
         <header>
             <div class="banner-div">
-                <h1 class="banner-title">E.T.I.R.Z <br> José Laurencio Silva</h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
+                <h1 class="banner-title">
+                    E.T.I.R.Z <br />
+                    José Laurencio Silva
+                </h1>
+                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
             </div>
             <nav class="nav-bar">
-                <input type="checkbox" name="" id="check-menu">
+                <input type="checkbox" name="" id="check-menu" />
                 <label for="check-menu" id="label-check">
-                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon">
+                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon" />
                 </label>
                 <div class="menu">
                     <ul>
@@ -65,22 +68,31 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Informática</h1>
-                        <img src="/resources/images/menciones/informatica1.jpg" alt="" class="img-content">
+                        <img src="/resources/images/menciones/informatica1.jpg" alt="" class="img-content" />
                         <p class="text-section">El Técnico en informática analiza, diseña y maneja sistemas de información. Desarrolla distintos tipos de estructuras lógcias para solucionar problemas usando computadoras. Toma decisiones de índole administrativo, establece normas y procedimientos para los sistemas de computación desarrollados.</p>
-                        <br>
+                        <br />
                         <p class="text-section">Su campo de especialización le permite un amplio manejo operativo de equipos, programas operacionales, técnicas de programación, lenguajes de computación, metodología de análisis de sistemas, estructuración de datos y desempeño en el área de la ofimática.</p>
-                        <br>
+                        <br />
                         <p class="text-section">La clasificación de las materias impartidas en la mención informática son:</p>
                         <ul class="list-section">
-                            <p><b>4to año: </b><!-- todo --></p>
-                            <p><b>5to año: </b><!-- todo --></p>
-                            <p><b>6to año: </b><!-- todo --></p>
+                            <p>
+                                <b>4to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>5to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>6to año: </b
+                                ><!-- todo -->
+                            </p>
                         </ul>
                     </div>
                 </div>
             </section>
             <aside class="side-bar">
-                <img src="" alt="" class="img-sidebar">
+                <img src="" alt="" class="img-sidebar" />
                 <div class="text-sidebar-container">
                     <p></p>
                 </div>
@@ -90,7 +102,10 @@
             <div class="footer-div">
                 <div class="footer-direction">
                     <h3 class="footer-title">Dirección</h3>
-                    <p>Tinaquillo, estado Cojedes. <br> Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                    <p>
+                        Tinaquillo, estado Cojedes. <br />
+                        Calle Plaza frente a la Urbanización Buenos Aires.
+                    </p>
                 </div>
                 <div class="footer-contacs">
                     <h3 class="footer-title">Contactos</h3>
