--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -24,13 +24,16 @@
     <body>
         <header>
             <div class="banner-div">
-                <h1 class="banner-title">E.T.I.R.Z <br> José Laurencio Silva</h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
+                <h1 class="banner-title">
+                    E.T.I.R.Z <br />
+                    José Laurencio Silva
+                </h1>
+                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
             </div>
             <nav class="nav-bar">
-                <input type="checkbox" name="" id="check-menu">
+                <input type="checkbox" name="" id="check-menu" />
                 <label for="check-menu" id="label-check">
-                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon">
+                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon" />
                 </label>
                 <div class="menu">
                     <ul>
@@ -65,24 +68,33 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Mecánica</h1>
-                        <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content">
+                        <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content" />
                         <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
-                        <br>
+                        <br />
                         <p class="text-section">Toma parte en la planificación, proyecto, instalación y mantenimiento de cualquier complejo industrial. Se desenvuelve en los campos de Electricidad, Automotriz y Refrigeración. Su trabajo empieza con la programación de los sistemas de producción, teniendo especialmente en cuenta cuestiones tales como materiales, costes y eficiencia.</p>
-                        <br>
+                        <br />
                         <p class="text-section">Los técnicos medios en mecánica diseñan y operan programas pensados para mantener el funcionamiento de la maquinaria, y proporcionan asesoramiento técnico en el diagnóstico y reparación de averías en el equipamiento y los instrumentos industriales.</p>
-                        <br>
+                        <br />
                         <p class="text-section">La clasificación de las materias en la mención mecánica son:</p>
                         <ul class="list-section">
-                            <p><b>4to año: </b><!-- todo --></p>
-                            <p><b>5to año: </b><!-- todo --></p>
-                            <p><b>6to año: </b><!-- todo --></p>
+                            <p>
+                                <b>4to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>5to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>6to año: </b
+                                ><!-- todo -->
+                            </p>
                         </ul>
                     </div>
                 </div>
             </section>
             <aside class="side-bar">
-                <img src="" alt="" class="img-sidebar">
+                <img src="" alt="" class="img-sidebar" />
                 <div class="text-sidebar-container">
                     <p></p>
                 </div>
@@ -92,7 +104,10 @@
             <div class="footer-div">
                 <div class="footer-direction">
                     <h3 class="footer-title">Dirección</h3>
-                    <p>Tinaquillo, estado Cojedes. <br> Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                    <p>
+                        Tinaquillo, estado Cojedes. <br />
+                        Calle Plaza frente a la Urbanización Buenos Aires.
+                    </p>
                 </div>
                 <div class="footer-contacs">
                     <h3 class="footer-title">Contactos</h3>
