--- a/pages/menciones/minas.html
+++ b/pages/menciones/minas.html
@@ -24,13 +24,16 @@
     <body>
         <header>
             <div class="banner-div">
-                <h1 class="banner-title">E.T.I.R.Z <br> José Laurencio Silva</h1>
-                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img">
+                <h1 class="banner-title">
+                    E.T.I.R.Z <br />
+                    José Laurencio Silva
+                </h1>
+                <img src="/resources/images/descarga.jpeg" alt="" class="banner-img" />
             </div>
             <nav class="nav-bar">
-                <input type="checkbox" name="" id="check-menu">
+                <input type="checkbox" name="" id="check-menu" />
                 <label for="check-menu" id="label-check">
-                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon">
+                    <img src="/resources/images/icons/menu.svg" alt="" class="menu-icon" />
                 </label>
                 <div class="menu">
                     <ul>
@@ -65,22 +68,31 @@
                 <div class="div-section">
                     <div class="content-section">
                         <h1 class="title-section">Minas</h1>
-                        <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content">
+                        <img src="/resources/images/menciones/minas1.jpg" alt="" class="img-content" />
                         <p class="text-section">Los técnicos en minería realizan tareas técnicas para ayudar en la investigación y experimentación relacionada con la metalurgia, en la mejora de los métodos de extracción de minerales sólidos, petróleo y gas, y en el diseño, construcción, operación, mantenimiento y reparación de las minas y las instalaciones, de los sistemas de transporte y almacenamiento de petróleo y gas natural, y para la extracción de metales de los minerales.</p>
-                        <br>
+                        <br />
                         <p class="text-section">Sus responsabilidades incluyen calcular el uso y valor potenciales de los depósitos minerales, la gestión y expansión de las minas, y la previsión de los posibles efectos ambientales de la minería, como puede ser la contaminación atmosférica.</p>
-                        <br>
+                        <br />
                         <p class="text-section">La clasificación de las materias son:</p>
                         <ul class="list-section">
-                            <p><b>4to año: </b><!-- todo --></p>
-                            <p><b>5to año: </b><!-- todo --></p>
-                            <p><b>6to año: </b><!-- todo --></p>
+                            <p>
+                                <b>4to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>5to año: </b
+                                ><!-- todo -->
+                            </p>
+                            <p>
+                                <b>6to año: </b
+                                ><!-- todo -->
+                            </p>
                         </ul>
                     </div>
                 </div>
             </section>
             <aside class="side-bar">
-                <img src="" alt="" class="img-sidebar">
+                <img src="" alt="" class="img-sidebar" />
                 <div class="text-sidebar-container">
                     <p></p>
                 </div>
@@ -90,7 +102,10 @@
             <div class="footer-div">
                 <div class="footer-direction">
                     <h3 class="footer-title">Dirección</h3>
-                    <p>Tinaquillo, estado Cojedes. <br> Calle Plaza frente a la Urbanización Buenos Aires.</p>
+                    <p>
+                        Tinaquillo, estado Cojedes. <br />
+                        Calle Plaza frente a la Urbanización Buenos Aires.
+                    </p>
                 </div>
                 <div class="footer-contacs">
                     <h3 class="footer-title">Contactos</h3>
