--- a/pages/menciones/mecanica.html
+++ b/pages/menciones/mecanica.html
@@ -101,17 +101,36 @@
             </aside>
         </main>
         <footer>
-            <div class="footer-div">
-                <div class="footer-direction">
-                    <h3 class="footer-title">Dirección</h3>
-                    <p>
-                        Tinaquillo, estado Cojedes. <br />
-                        Calle Plaza frente a la Urbanización Buenos Aires.
-                    </p>
+            <div class="footer-container">
+                <div class="column1">
+                    <h3 class="footer-title">Información Extra</h3>
+                    <p>Este es un sitio estático e informativo, cuyo objetivo es dar a conocer aun mas la institución del "E.T.I.R.Z - José Laurencio Silva".</p>
                 </div>
-                <div class="footer-contacs">
+                <div class="column2">
                     <h3 class="footer-title">Contactos</h3>
-                    <p>Correo : <b>www.etirz123@gmail.com</b></p>
+                    <ul>
+                        <li class="footer-element">
+                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
+                            <span>* correo *</span>
+                        </li>
+                        <li class="footer-element">
+                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
+                            <span>* whatsapp *</span>
+                        </li>
+                        <li class="footer-element">
+                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
+                            <span>* facebook *</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column3">
+                    <h3 class="footer-title">Dirección</h3>
+                    <ul>
+                        <li class="footer-element">
+                            <img src="/resources/images/icons/menu.svg" alt="" class="footer-icon">
+                            <p>Calle Plaza, Sector Buenos Aires <br> Tinaquillo, Edo.Cojedes, Venezuela</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
