--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="article-container">
                             <div class="article-content">
                                 <div>
-                                    <a href="#"><p>Historia</p></a>
+                                    <a href="/pages/historia/historia.html"><p>Historia</p></a>
                                     <a href="#"><p>Misión</p></a>
                                 </div>
                                 <div>
