--- a/pages/historia/historia.html
+++ b/pages/historia/historia.html
@@ -15,7 +15,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mecánica - Jose Laurencio Silva</title>
+        <title>Historia - Jose Laurencio Silva</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet" />
@@ -41,7 +41,7 @@
                         <li>
                             <a href="#">Menciones</a>
                             <ul>
-                                <li><a href="#">Mecánica</a></li>
+                                <li><a href="/pages/menciones/mecanica.html">Mecánica</a></li>
                                 <li><a href="/pages/menciones/administracion.html">Administración</a></li>
                                 <li><a href="/pages/menciones/minas.html">Minas</a></li>
                                 <li><a href="/pages/menciones/informatica.html">Informática</a></li>
@@ -50,7 +50,7 @@
                         <li>
                             <a href="#">Nosotros</a>
                             <ul>
-                                <li><a href="/pages/historia/historia.html">Historia</a></li>
+                                <li><a href="#">Historia</a></li>
                                 <li><a href="#">Misión</a></li>
                                 <li><a href="#">Visión</a></li>
                                 <li><a href="#">Valores</a></li>
@@ -67,29 +67,10 @@
             <section class="main-section side">
                 <div class="div-section">
                     <div class="content-section">
-                        <h1 class="title-section">Mecánica</h1>
-                        <img src="/resources/images/menciones/mecanica1.jpg" alt="Mecánica" class="img-content" />
-                        <p class="text-section">Los técnicos medios en mecánica se encargan del diseño, desarrollo, mantenimiento y operación de todo tipo de máquinas y de sus equipamientos. Trabajan en una amplia gama de industrias, incluyendo industrias manufactureras o de procesamiento.</p>
-                        <br />
-                        <p class="text-section">Toma parte en la planificación, proyecto, instalación y mantenimiento de cualquier complejo industrial. Se desenvuelve en los campos de Electricidad, Automotriz y Refrigeración. Su trabajo empieza con la programación de los sistemas de producción, teniendo especialmente en cuenta cuestiones tales como materiales, costes y eficiencia.</p>
-                        <br />
-                        <p class="text-section">Los técnicos medios en mecánica diseñan y operan programas pensados para mantener el funcionamiento de la maquinaria, y proporcionan asesoramiento técnico en el diagnóstico y reparación de averías en el equipamiento y los instrumentos industriales.</p>
-                        <br />
-                        <p class="text-section">La clasificación de las materias en la mención mecánica son:</p>
-                        <ul class="list-section">
-                            <p>
-                                <b>4to año: </b
-                                ><!-- todo -->
-                            </p>
-                            <p>
-                                <b>5to año: </b
-                                ><!-- todo -->
-                            </p>
-                            <p>
-                                <b>6to año: </b
-                                ><!-- todo -->
-                            </p>
-                        </ul>
+                        <h1 class="title-section">Historia</h1>
+                        <img src="/resources/images/imagen_antigua_liceo.jpg" alt="" class="img-content" />
+                        <p class="text-section">El Liceo "José Laurencio Silva" fue fundado el 19 de septiembre de 1958, bajo decreto N.74 emanado de la gobernación del estado Cojedes. Debe su epónimo al ilustre héroe de la independencia de venezolana general en jefe José Laurencio Silva Flores, nativo de la población de Tinaco, estado Cojedes. Inició actividades sin sede propia. <br><br> Luego comienza a funcionar frente la plaza Bolívar, hasta el mes de marzo de 2001 cuando se muda a la sede actual. En sus inicios solamente ofrecía estadios hasta el tercer año de bachillerato. El año escolar 1964-1965 abre el primer año de humanidades y en el mes de junio de 1966 egresa la primera promoción de bachillerato. El año escolar 1968-1969 abre el primer año de ciencias y en 1970 fue la primera promoción de bachilleres en esta mención. El año 1971, deja de ser dependencia estatal para pasar a control directo del Ministerio de Educación. <br><br> Para el año 1979 se abren las especialidades mećanicas de mantenimiento y docencia. Posteriormente se inicia contabilidad y secretario. La especialidad de administración de personal es de reciente creación (año escolar 2003-2004). A partir del año escolar 1991-1992 esta en practica en este liceo, el ensayo de diseño curricular para educación media y diversificada en las menciones ciencias básicas y tecnológicas, y ciencias sociales, humanidades y tecnología (resolución 1.015). En el año 2005 se inició a las menciones de administración financiera, informática y promotor en deportes y recreación, según la resolución N.238 de fecha 22-07-2002. <br><br> En el año escolar 2008-2009, se instaló un equipo pedagógico conformado por docentes de la institución con la finalidad de realizar un diagnostico sobre las condiciones que tenia el CD "José Laurencio Silva" para funcionar como Escuela Técnica Industrial Robinsoniana o Liceo Nacional Bolivariano producto de un estudio hecho a los estudiantes y profesores a través de una encuesta que arrojó como resultado que dicha institución pasaría a Escuela Técnica Industrial Robinsoniana y se dejaría de dictar clases a las menciones de ciencias y humanidades, esto quiere decir que dejaría de ser un híbrido para tener solo especialidades en el área técnica, comcercial e industrial las cuales son las siguientes: Mecánica de mantenimiento, Informática y Administración de los servicios con este proyecto se inscribirían estudiantes desde primer año hasta llegar a tercer año y continuar sus estudios en cualquiera de estas Especialidades antes mencionadas actualmente esta institución funciona como Escuela técnica desde primero a sexto año, pero aun en su codificación sigue apareciendo como ciclo diversificado.</p>
+                        <p class="text-section"></p>
                     </div>
                 </div>
             </section>
