--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -50,7 +50,7 @@
                         <li>
                             <a href="#">Nosotros</a>
                             <ul>
-                                <li><a href="#">Historia</a></li>
+                                <li><a href="/pages/historia/historia.html">Historia</a></li>
                                 <li><a href="#">Misión</a></li>
                                 <li><a href="#">Visión</a></li>
                                 <li><a href="#">Valores</a></li>
