"Misión, Visión y Valores".
Se unificó las secciones "Misión", "Visión" y "Valores" en una sola.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,9 @@
                             <div class="article-content">
                                 <div>
                                     <a href="/pages/historia/historia.html"><p>Historia</p></a>
-                                    <a href="#"><p>Misión</p></a>
                                 </div>
                                 <div>
-                                    <a href="#"><p>Visión</p></a>
-                                    <a href="#"><p>Valores</p></a>
+                                    <a href="#"><p>Misión, Visión y Valores</p></a>
                                 </div>
                             </div>
                         </div>
