--- a/pages/menciones/administracion.html
+++ b/pages/menciones/administracion.html
@@ -51,9 +51,7 @@
                             <a href="#">Nosotros</a>
                             <ul>
                                 <li><a href="/pages/historia/historia.html">Historia</a></li>
-                                <li><a href="#">Misión</a></li>
-                                <li><a href="#">Visión</a></li>
-                                <li><a href="#">Valores</a></li>
+                                <li><a href="#">Misión, Visión y Valores</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Estructura Física</a></li>
